Bug 576375 LayerManagerOGL::Initialize leaks p in SHADER_PROGRAM when p->Initialize fails r=vlad