gfx/layers/opengl/LayerManagerOGL.cpp
@@ -117,12 +117,14 @@ LayerManagerOGL::Initialize(GLContext *aExistingContext)
   // We unfortunately can't do generic initialization here, since the
   // concrete type actually matters.  This macro generates the
   // initialization using a concrete type and index.
-#define SHADER_PROGRAM(penum, ptype, vsstr, fsstr) do {                 \
+#define SHADER_PROGRAM(penum, ptype, vsstr, fsstr) do {                           \
     NS_ASSERTION(programIndex++ == penum, "out of order shader initialization!"); \
-    ptype *p = new ptype(mGLContext);                                   \
-    if (!p->Initialize(vsstr, fsstr))                                   \
-      return PR_FALSE;                                                  \
-    mPrograms.AppendElement(p);                                         \
+    ptype *p = new ptype(mGLContext);                                             \
+    if (!p->Initialize(vsstr, fsstr)) {                                           \
+      delete p;                                                                   \
+      return PR_FALSE;                                                            \
+    }                                                                             \
+    mPrograms.AppendElement(p);                                                   \
   } while (0)
 
 
